# hypr-workspace-manager

./: Cargo.toml
src/: cli.rs  hypr.rs  lib.rs  main.rs  path_builder.rs  server.rs  socket.rs
src/server/: signature.rs  types.rs
src/server/signature/: types.rs
src/server/types/: iter_map.rs  read_response.rs  request.rs
src/server/types/request/: workspace.rs
