[package]
name    = "hypr-workspace-manager"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

[dependencies]
anyhow        = "1.0.86"
clap          = { version = "4.5.15", features = ["color", "derive", "wrap_help"] }
clap_complete = "4.5.16"
skim          = "0.10.4"
tokio         = { version = "1.39.2", features = ["full"] }
tracing       = "0.1.40"
