[package]
name    = "hypr-workspace-manager"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

[dependencies]
anyhow             = "1.0.86"
clap               = { version = "4.5.15", features = ["color", "derive", "wrap_help"] }
clap_complete      = "4.5.16"
tokio              = { version = "1.39.2", features = ["full"] }
tracing            = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tracing-tree = { version = "0.4.0", default-features = false, features = [
    "time",
] }
